cambio de título

--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>practica 1</title>
+    <title>práctica 1</title>
 </head>
 <body>
-    <h1>compra de un circo</h1>
+    <h1>Compra de electrodomésticos</h1>
     <img src="eli.PNG" alt="" width="300" >
 </body>
 </html>
